--- a/resources/sass/_recetas.scss
+++ b/resources/sass/_recetas.scss
@@ -2,6 +2,10 @@ body{
     font-family: $parrafos-font-family;
 }
 
+trix-editor{
+    min-height: 300px;
+}
+
 .bg-primary .navbar-brand{
     color:white;
     font-family:$font-family-sans-serif;
